Don't use incubator modules for the dcs; we don't index or search anything.